kubernetes/platform/development/services/angular-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-ui
  labels:
    app: angular-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-ui
  template:
    metadata:
      labels:
        app: angular-ui
    spec:
      containers:
        - name: angular-ui
          image: ghcr.io/thainguyencoffee/angular-ui:latest
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 7085

---

apiVersion: v1
kind: Service
metadata:
  name: angular-ui
  labels:
    app: angular-ui
spec:
  type: ClusterIP
  selector:
    app: angular-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7085
