kubernetes/platform/development/services/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: el-keycloak
  labels:
    app: el-keycloak
spec:
  selector:
    matchLabels:
      app: el-keycloak
  template:
    metadata:
      labels:
        app: el-keycloak
    spec:
      containers:
        - name: el-keycloak
          image: quay.io/keycloak/keycloak:24.0.0
          args:
            - "start-dev"
            - "--import-realm"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - name: el-keycloak-config-volume
              mountPath: /opt/keycloak/data/import/
      volumes:
        - name: el-keycloak-config-volume
          configMap:
            name: el-keycloak-config

---

apiVersion: v1
kind: Service
metadata:
  name: el-keycloak
  labels:
    app: el-keycloak
spec:
  type: ClusterIP
  selector:
    app: el-keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: el-keycloak
spec:
  rules:
    - host: el-keycloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-keycloak
                port:
                  number: 80
